--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rocket Links</title>
     <link rel="stylesheet" href="./style.css">
-    <title>Guilherme Garcês Linktree</title>
   </head>
   <body class="dark-red">
 
