--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </ul>
 
     <footer>
-       Feito com 💜 pelo <a href="https://rocketseat.com.br" target="_blank">
-       Rocketseat </a>
+       Feito com 💜 pelo <a href="https://github.com/Garcezs" target="_blank">
+       Guilherme Garcês </a>
        </footer>
 
     </div>
